# auto-trader

./: .claudeignore  .env.example  .gitignore  .gitmodules  .graphifyignore  CLAUDE.md  Cargo.toml  Dockerfile  TESTING.md  docker-compose.yml
.githooks/: post-commit  pre-push
.github/workflows/: ci.yml
config/: default.toml
crates/app/: Cargo.toml
crates/app/src/: api.rs  closer.rs  enriched_ingest.rs  knowledge.rs  lib.rs  liquidation.rs  main.rs  position_monitor.rs  price_store.rs  regime.rs  startup.rs  startup_reconcile.rs  weekly_batch.rs  wilson.rs
crates/app/src/api/: accounts.rs  dashboard.rs  filters.rs  health.rs  market.rs  mod.rs  notifications.rs  positions.rs  strategies.rs  trades.rs
crates/app/src/tasks/: balance_sync.rs  mod.rs  reconciler.rs
crates/app/tests/: balance_sync_test.rs  integration_test.rs  live_integration_test.rs  reconciler_test.rs  startup_test.rs  strategy_pipeline_test.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: lib.rs  report.rs  runner.rs
crates/core/: Cargo.toml
crates/core/src/: commission.rs  config.rs  event.rs  executor.rs  knowledge.rs  lib.rs  margin.rs  strategy.rs  types.rs  vegapunk_port.rs
crates/db/: Cargo.toml
crates/db/src/: candles.rs  dashboard.rs  lib.rs  macro_events.rs  mid_price.rs  notifications.rs  paper_accounts.rs  pool.rs  risk_halts.rs  strategies.rs  summary.rs  trades.rs  trading_accounts.rs
crates/db/tests/: migration_test.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs  paper.rs  position_sizer.rs  risk_gate.rs  trader.rs
crates/executor/tests/: risk_gate_test.rs  trader_test.rs
crates/integration-tests/: Cargo.toml  build.rs
crates/integration-tests/fixtures/: config_disabled_strategy.toml  config_invalid_strategy.toml  config_missing_pairs.toml  config_missing_vegapunk.toml  config_valid.toml  smoke_test.csv
crates/integration-tests/fixtures/phase3/: bb_atr_zero.csv  bb_history_insufficient.csv  bb_long_entry.csv  bb_no_signal.csv  bb_short_entry.csv  donchian_atr_zero.csv  donchian_long_breakout.csv  donchian_no_signal.csv  donchian_short_breakout.csv  squeeze_atr_zero.csv  squeeze_long_entry.csv  squeeze_no_signal.csv  squeeze_short_entry.csv
crates/integration-tests/src/: lib.rs
crates/integration-tests/src/helpers/: app.rs  db.rs  failure_output.rs  fixture_loader.rs  mod.rs  pipeline.rs  seed.rs  sizing_invariants.rs  trade_flow.rs
crates/integration-tests/src/mocks/: bitflyer_ws.rs  exchange_api.rs  gemini.rs  gmo_fx_server.rs  mod.rs  oanda_server.rs  slack_webhook.rs  vegapunk.rs  vegapunk_grpc.rs
crates/integration-tests/tests/: phase1_config.rs  phase1_startup.rs  phase2_accounts.rs  phase2_auth.rs  phase2_dashboard.rs  phase2_misc.rs  phase2_strategies.rs  phase2_trades.rs  phase3_accounts_leverage.rs  phase3_bb_mean_revert.rs  phase3_close_flow.rs  phase3_commission.rs  phase3_donchian_evolve.rs  phase3_donchian_trend.rs  phase3_execution.rs  phase3_execution_flow.rs  phase3_gmo_close_handoff.rs  phase3_guards.rs  phase3_integrity.rs  phase3_jobs.rs  phase3_liquidation_safety.rs  phase3_monitoring.rs  phase3_notifications.rs  phase3_paper_liquidation.rs  phase3_pipeline_e2e.rs  phase3_pool.rs  phase3_reconcile.rs  phase3_routing.rs  phase3_routing_e2e.rs  phase3_shutdown.rs  phase3_sizing_boundaries.rs  phase3_squeeze_momentum.rs  phase3_strategy_exit_e2e.rs  phase3_swing_llm.rs  phase4_external.rs  smoke_test.rs
crates/macro-analyst/: Cargo.toml
crates/macro-analyst/src/: analyst.rs  calendar.rs  lib.rs  news.rs  summarizer.rs
crates/market/: Cargo.toml
crates/market/src/: bitflyer.rs  bitflyer_private.rs  candle_builder.rs  exchange_api.rs  gmo_fx.rs  gmo_fx_private.rs  indicators.rs  lib.rs  market_feed.rs  monitor.rs  null_exchange_api.rs  oanda.rs  oanda_private.rs  price_store.rs  provider.rs
crates/market/tests/: bitflyer_private_test.rs  oanda_private_test.rs
crates/notify/: Cargo.toml
crates/notify/src/: lib.rs
crates/notify/tests/: slack_integration_test.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: bb_mean_revert.rs  crypto_trend.rs  donchian_trend.rs  donchian_trend_evolve.rs  donchian_trend_fx.rs  engine.rs  lib.rs  squeeze_momentum.rs  swing_llm.rs  trend_follow.rs
crates/vegapunk-client/: Cargo.toml  build.rs
crates/vegapunk-client/src/: client.rs  lib.rs
dashboard-ui/: package-lock.json  package.json
dashboard-ui/src/: App.tsx
dashboard-ui/src/api/: client.ts  types.ts
dashboard-ui/src/components/: AccountForm.tsx  BalanceChart.tsx  GlobalFilters.tsx  HourlyChart.tsx  KpiCards.tsx  MarketFeedHealthBanner.tsx  NotificationBell.tsx  (+7 more)
docs/: strategy-performance-review-2026-04-19.md
graphify-out/: .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
migrations/: 20260404000001_initial.sql  20260405000001_crypto_paper_trading.sql  20260406000001_paper_accounts_strategy_and_seed.sql  20260406000002_account_type.sql  20260406000003_paper_account_events.sql  20260407000001_min_balance_constraint.sql  20260407000002_candle_volume_bigint.sql  20260407000003_strategies.sql  20260407000004_trade_max_hold_until.sql  20260407000005_strategies_v2_seed.sql  20260407000006_cleanup_legacy_crypto_trend.sql  20260407000007_cleanup_trend_follow.sql  20260407000008_lock_existing_margin.sql  20260407000009_truncate_yen_amounts.sql  20260408000001_notifications.sql  20260409000001_fx_paper_accounts_seed.sql  20260410000001_evolve_strategy_and_params.sql  20260414000001_live_trading_support.sql  20260415000001_unified_rewrite.sql  20260416000001_risk_halts.sql  20260417000001_revert_pr2_unused.sql  20260418000001_one_live_per_exchange.sql  20260419000001_oanda_paper_seed.sql  20260420000001_clean_evolve_params.sql  20260421000001_lower_atr_baseline.sql  20260428000001_gmo_fx_exchange.sql  20260430000001_unify_mode_account_type.sql  20260515000001_add_exchange_position_id_to_trades.sql
proto/: graphrag.proto
schemas/: fx-trading.yml
scripts/: install-hooks.sh  test-all.sh
specs/: crypto-paper-trading.md  design.md  vegapunk-integration.md
(+47 files in other folders)
