[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/macro-analyst",
    "crates/market",
    "crates/strategy",
    "crates/executor",
    "crates/app",
    "crates/vegapunk-client",
    "crates/backtest",
    "crates/notify",
    "crates/integration-tests",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "json", "macros", "migrate"] }
async-trait = "0.1"
axum = "0.7"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"

# internal crates
auto-trader-core = { path = "crates/core" }
auto-trader-db = { path = "crates/db" }
auto-trader-market = { path = "crates/market" }
auto-trader-strategy = { path = "crates/strategy" }
auto-trader-executor = { path = "crates/executor" }
auto-trader-vegapunk = { path = "crates/vegapunk-client" }
auto-trader-macro-analyst = { path = "crates/macro-analyst" }
auto-trader-backtest = { path = "crates/backtest" }
auto-trader-notify = { path = "crates/notify" }

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
governor = "0.6"
urlencoding = "2"

# test helpers (reserved for PR 2+)
wiremock = "0.6"
csv = "1"
