[package]
name = "auto-trader"
version = "0.1.0"
edition.workspace = true

[lib]
name = "auto_trader"
path = "src/lib.rs"

[[bin]]
name = "auto-trader"
path = "src/main.rs"

[dependencies]
auto-trader-core = { workspace = true }
auto-trader-db = { workspace = true }
auto-trader-market = { workspace = true }
auto-trader-strategy = { workspace = true }
auto-trader-executor = { workspace = true }
auto-trader-notify = { workspace = true }
auto-trader-vegapunk = { workspace = true }
auto-trader-macro-analyst = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = "1"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
chrono = { workspace = true }
uuid = { workspace = true }
wiremock = "0.6"
serde_json = { workspace = true }
