[package]
name = "auto-trader-backtest"
version = "0.1.0"
edition.workspace = true

[dependencies]
auto-trader-core = { workspace = true }
auto-trader-db = { workspace = true }
auto-trader-market = { workspace = true }
auto-trader-executor = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
