[package]
name = "auto-trader-executor"
version = "0.1.0"
edition.workspace = true

[dependencies]
auto-trader-core = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
