[package]
name = "auto-trader-integration-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
auto-trader = { path = "../app" }
auto-trader-core = { workspace = true }
auto-trader-db = { workspace = true }
auto-trader-market = { workspace = true }
auto-trader-strategy = { workspace = true }
auto-trader-executor = { workspace = true }
auto-trader-vegapunk = { workspace = true }
auto-trader-notify = { workspace = true }
auto-trader-macro-analyst = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

sqlx = { workspace = true }

rust_decimal = { workspace = true }
rust_decimal_macros = "1"
chrono = { workspace = true }
uuid = { workspace = true }

wiremock = { workspace = true }
reqwest = { workspace = true }

tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = "0.1"

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

csv = { workspace = true }

anyhow = { workspace = true }
toml = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
external-api = []
