[package]
name = "auto-trader-market"
version = "0.1.0"
edition.workspace = true

[dependencies]
auto-trader-core = { workspace = true }
auto-trader-db = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
governor = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
wiremock = { workspace = true }
tokio = { workspace = true }
