[package]
name = "auto-trader-notify"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

auto-trader-core = { path = "../core" }

[dev-dependencies]
wiremock = "0.6"
rust_decimal_macros = "1"
tokio = { workspace = true }
