[package]
name = "auto-trader-strategy"
version = "0.1.0"
edition.workspace = true

[dependencies]
auto-trader-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
auto-trader-market = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
chrono = { workspace = true }
