[package]
name = "auto-trader-strategy"
version = "0.1.0"
edition.workspace = true

[dependencies]
auto-trader-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = "1"
auto-trader-market = { workspace = true }
async-trait = { workspace = true }
auto-trader-vegapunk = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
