[package]
name = "auto-trader-vegapunk"
version = "0.1.0"
edition.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
auto-trader-core = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
